home/styles/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

:root {
    --primary: #5A9CC7;
    --secondary: #91DB55;
    --tertiary: #D1E4EB;
    --dark: #0B2027;
    --light: #FFFBFC;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--dark);
    color: var(--light);
    padding: 0 15px;
    height: 125px;
    position: relative;
}

nav a {
    text-decoration: none;
}

nav .hamburger-menu {
    display: none;
    cursor: pointer;
    position: relative;
}

nav .menu-links {
    display: none;
    position: absolute;
    width: 100vw;
    background-color: var(--dark);
    bottom: -350px;
    height: 350px;
    left: 0;
    z-index: 99;
    transform: scaleY(0);
    transition: transform 350ms ease;
    transform-origin: top;
}

nav .menu-links ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    list-style-type: none;
    gap: 15px;
}

nav .menu-links ul li {
    position: relative;
}

nav .menu-links ul li.active::before {
    content: '';
    width: 12px;
    height: 12px;
    z-index: 9999;
    position: absolute;
    top: -5px;
    left: -8px;
    border-top: 2px solid var(--primary);
    border-left: 2px solid var(--primary);
}

nav .menu-links ul li.active::after {
    content: '';
    width: 12px;
    height: 12px;
    z-index: 9999;
    position: absolute;
    bottom: -5px;
    right: -8px;
    border-bottom: 2px solid var(--primary);
    border-right: 2px solid var(--primary);
}

nav .menu-links ul li a {
    color: var(--light);
    font-size: 20px;
}

nav .menu-links.open {
    transform: scaleY(1);
    box-shadow: 0px 20px 20px 5px rgb(11,32,39)
}

nav .hamburger-menu svg rect {
    transition: all 350ms ease;
}

nav .hamburger-menu svg rect:nth-child(1) {
    transform-origin: top left;
}

nav .hamburger-menu svg rect:nth-child(3) {
    transform-origin: bottom left;
}

nav .hamburger-menu.open svg rect:nth-child(1) {
    
    transform: rotate(45deg);
}

nav .hamburger-menu.open svg rect:nth-child(2) {
    opacity: 0;
}

nav .hamburger-menu.open svg rect:nth-child(3) {
    transform-origin: bottom left;
    transform: rotate(-45deg);
}

.nav-logo img {
    width: 280px;
}

.nav-links {
    list-style-type: none;
}

.nav-links li {
    display: inline-block;
    margin: 0 25px;
    position: relative;
}

.nav-links li::before {
    content: '';
    opacity: 0;
    transform: scale(0);
    transform-origin: bottom right;
    transition: all 350ms ease;
    width: 12px;
    height: 12px;
    z-index: 9;
    position: absolute;
    top: -5px;
    left: -8px;
    border-top: 2px solid var(--primary);
    border-left: 2px solid var(--primary);
}

.nav-links li::after {
    content: '';
    opacity: 0;
    transform: scale(0);
    transform-origin: top left;
    transition: all 350ms ease;
    width: 12px;
    height: 12px;
    z-index: 9;
    position: absolute;
    bottom: -5px;
    right: -8px;
    border-bottom: 2px solid var(--primary);
    border-right: 2px solid var(--primary);
}

.nav-links li.active::before {
    content: '';
    opacity: 1;
    transform: scale(1);
} 

.nav-links li.active::after {
    content: '';
    opacity: 1;
    transform: scale(1);
} 

.nav-links li:hover::before {
    content: '';
    opacity: 1;
    transform: scale(1);
} 

.nav-links li:hover::after {
    content: '';
    opacity: 1;
    transform: scale(1);
} 

.nav-links li a {
    color: var(--light);
}

nav .donate-button {
    background-color: var(--secondary);
    padding: 15px 30px;
    text-transform: uppercase;
    font-weight: bold;
    border-radius: 25px;
    font-size: 18px;
    height: 50px;
    color: var(--light);
    transform-origin: center;
    transition: transform 350ms ease;
}

nav .donate-button:hover {
    transform: scale(1.1);
}

.menu-links .donate-link {
    position: absolute;
    bottom: 25px;
    left: 50%;
    transform: translateX(-50%);
}

.menu-links .donate-button {
    width: 100%;
    text-align: center;
}

.landing {
    min-height: max(calc(100vh - 125px), 730px);
    position: relative;
    background-color: rgba(11, 32, 39, 0.4);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-bottom: 50px;
}

.shade {
    position: absolute;
    width: 100%;
    height: 30%;
    background: linear-gradient(0deg, rgba(11,32,39,0) 0%, rgba(11,32,39,1) 100%);
    z-index: 1;
    top: 0;
}

#background-video {
    width: 100vw;
    height: max(calc(100vh - 125px), 730px);
    object-fit: cover;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: -1;
    transform: scaleX(-1);
}

.landing .twac {
    margin-top: 50px;
    width: 200px;
}

.landing .logo {
    
    width: 500px;
    z-index: 9;
}

.countdown-timer {
    width: 600px !important;
    margin-top: -25px;
}

.landing a {
    text-decoration: none;
}

.landing .donate-button {
    margin-top: 40px;
    padding: 15px 30px;
    background-color: var(--secondary);
    border-radius: 37.5px;
    text-transform: uppercase;
    color: var(--light);
    font-weight: 700;
    font-size: 36px;
    text-align: center;
    cursor: pointer;
    transform-origin: center;
    transition: transform 500ms ease-out;
}

.landing .donate-button:hover {
    transform: scale(1.1);
}

.team {
    min-height: 100vh;
    background-color: var(--tertiary);
}

.team .title {
    color: var(--dark);
    text-align: center;
    padding: 25px;
    font-size: 46px;
}

.team .info {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 1200px;
    margin: 0 auto;
}

.team .info .text {
    flex: 1;
    color: var(--dark);
    padding: 25px;
}

.team .info .text li {
    list-style-type: none;
    overflow: visible;
}

.team .info .text ul li::before {
    content: '';
    color: transparent;
    background-image: url('/assets/bullet.png');
    background-size: cover;
    height: 20px;
    width: 20px;
    display: inline-block;
    margin-right: 10px;
}

.team .info .text a {
    text-decoration: none;
    color: var(--primary);
    font-weight: 700;
}

.team .info .text a:hover {
    text-decoration: underline;
}

.challenge {
    width: 100vw;
    min-height: 100vh;
    position: relative;
}

.challenge .map {
    width: 100vw;
    min-height: 100vh;
    background-color: var(--dark);
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    z-index: 0;
    position: absolute;
    top: 0;
}

.challenge .map img {
    height: 100vh;
    width: 100vw;
    object-fit: cover;
    object-position: center center;
}

.challenge .map img.small {
    display: none;
}

.challenge .info {
    width: 100vw;
    min-height: 100vh;
    background-color: var(--dark);
    position: absolute;
    top: 0;
    z-index: 9;
}

.challenge .info .title {
    color: var(--light);
    text-align: center;
    padding: 25px;
    font-size: 46px;
}

.challenge .info .text {
    color: var(--light);
    display: flex;
}

.challenge .info .text p {
    padding: 50px;
    flex: 1;
    line-height: 30px;
}

.challenge .info .text p a {
    font-weight: 700;
    text-decoration: none;
    color: var(--primary);
}

.challenge .info .text p a:hover {
    text-decoration: underline;
}

.challenge .info .text div {
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 50px;
}

.challenge .info .text div img {
    width: 70%;
}

.nomv {
    min-height: 50vh;
    width: 100vw;
    background-color: var(--light);
}

.nomv .title {
    color: var(--dark);
    text-align: center;
    padding: 25px;
    font-size: 46px;
}

.nomv .info {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
}

.nomv .info img {
    width: 30%;
}

.nomv .info p {
    line-height: 30px;
    color: var(--dark);
    width: 50%;
    padding-bottom: 16px;
}

.nomv .info p a {
    text-decoration: none;
    color: var(--primary);
    font-weight: 700;
}

.nomv .info p a:hover {
    text-decoration: underline;
}

.sponsors {
    overflow: hidden;
    background-color: var(--tertiary);
}

.sponsors .title {
    color: var(--dark);
    text-align: center;
    padding: 25px;
    font-size: 46px;
}

.sponsors .carousel {
    width: fit-content;
    min-width: 100vw;
    animation: marquee 30s linear infinite;
    overflow: hidden;
    display: flex;
    justify-content: flex-end;
    -webkit-justify-content: flex-end;
}

.sponsors .sponsor-logo {
    width: 250px;
    height: 250px;
    object-fit: contain;
    padding: 25px;
}

.sponsors .become-sponsor {
    width: 400px;
    height: 75px;
    background-color: var(--primary);
    border-radius: 37.5px;
    text-align: center;
    color: white;
    margin: 0 auto 25px auto;
    cursor: pointer;
    padding: 25px 30px;
    font-size: 24px;
    font-weight: 700;
    transition: transform 350ms ease;
    transform-origin: center;
}

.sponsors a {
    text-decoration: none;
}

.sponsors .become-sponsor:hover {
   transform: scale(1.05) !important;
}

footer {
    padding: 10px;
    background-color: var(--dark);
    color: rgba(255, 250, 251, 0.5);
    text-align: center;
}

@keyframes marquee {
    0% {
        transform: translateX(-100%);
    }
    100% {
        transform: translateX(100%);
    }
}

@media only screen and (max-width: 1340px) {
    nav .nav-links {
        display: none;
    }

    nav .hamburger-menu {
        display: block;
    }

    nav .menu-links {
        display: block;
    }

    .donate-menu {
        display: none;
    }
}

@media only screen and (max-width: 1250px) {
    .team .info {
        width: 100%;
    }
}

@media only screen and (max-width: 1050px) {
    .challenge .info .text {
        flex-direction: column;
    }

    .challenge .info .text div {
        flex-direction: row;
        padding-bottom: 15px;
    }

    .challenge .info .text div img {
        width: 35%;
    }
}


@media only screen and (max-width: 768px) {
    .nav-logo img {
        width: 200px;
    }

    .donate-menu {
        display: none;
    }

    nav .hamburger-menu {
        position: relative;
        left: 0;
        bottom: 0;
        transform: none;
    }

    .landing .logo {
        width: 80%;
    }

    .countdown-timer {
        width: 90% !important;
        margin-top: 0;
    }

    .landing .donate-button {
        font-size: 24px;
    }

    .team .info {
        flex-direction: column;
    }

    .challenge .info .text p {
        line-height: 24px;
        font-size: 15px;
        padding-top: 25px;
    }

    .nomv .info {
        flex-direction: column-reverse;
    }

    .nomv .info p {
        line-height: 24px;
        font-size: 15px;
        width: 100%;
        padding: 25px 50px;
    }

    .nomv .info img {
        width: 70%;
        margin-bottom: 20px;
    }

    .sponsors .sponsor-logo {
        width: 150px;
        height: 150px;
        padding: 15px;
    }

    .sponsors .become-sponsor {
        width: 70%;
        height: 50px;
        border-radius: 25px;
        padding: 15px 30px;
        font-size: 18px;
    }
}

@media only screen and (max-width: 570px) {
    .challenge .map img.big {
        display: none;
    }

    .challenge .map img.small {
        display: block;
    }
}

